--- a/You_huo/You_huo.csproj
+++ b/You_huo/You_huo.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Html\HJP\test.html" />
+    <Content Include="Html\LN\ln.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -90,7 +91,6 @@
     <Folder Include="CSS\ZTY\" />
     <Folder Include="Html\HXT\" />
     <Folder Include="Html\JX\" />
-    <Folder Include="Html\LN\" />
     <Folder Include="Html\ZTY\" />
   </ItemGroup>
   <PropertyGroup>
